--- a/assets/style.css
+++ b/assets/style.css
@@ -3,17 +3,17 @@
   margin: 0 auto;
 }
 
-#map{
+#map-div{
   height:350px;
-  width:60%;
-  float:right;
+  /*width:60%;*/
+  /*float:right;*/
   margin-right: 6px;
 }
 
-#weather{
+#weather-div{
   height:350px;
-  width:39%;
-  float:left;
+  /*width:39%;*/
+  /*float:left;*/
   border: solid;
   border-color: #000000;
   font-size: 16pt;
@@ -21,7 +21,7 @@
 
 }
 
-#sports{
+#sports-div{
   height:200px;
   width:99%;
   float:left;
@@ -32,14 +32,44 @@
   margin-left: 6px;
 }
 
-#otherStuff{
+#places-div{
   height:200px;
   width:99%;
-  float:left;
+  /*float:left;*/
   border: solid;
   border-color: #000000;
   font-size: 16pt;
   margin-top:20px;
   margin-left: 6px;
 
+}
+
+.content-card {
+
+  background-color: grey;
+}
+
+.large {
+  font-size: 14px;
+}
+
+.bold {
+  font-weight: bold;
+
+}
+
+.small {
+font-size: 10px;
+}
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
+
+.blue {
+  color: blue;
 }
