--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,12 @@
+Body {
+  /*background-color: white;*/
+  background: linear-gradient(to top, #ffcc66 22%, #ffffff 113%);
+}
+nav .nav-wrapper {
+  height:200px;
+  line-height: 200px;
+  background-color: orange;
+}
 .form-inline{
   font-size: 12pt;
   margin: 0 auto;
@@ -8,14 +17,15 @@
   /*width:60%;*/
   /*float:right;*/
   margin-right: 6px;
+  /*border-style: solid;*/
 }
 
 #weather-div{
   height:350px;
   /*width:39%;*/
   /*float:left;*/
-  border: solid;
-  border-color: #000000;
+  /*border: solid;
+  border-color: #000000;*/
   font-size: 16pt;
   margin-left: 6px;
 
@@ -24,9 +34,9 @@
 #sports-div{
   height:200px;
   width:99%;
-  float:left;
-  border: solid;
-  border-color: #000000;
+  /*float:left;*/
+  /*border: solid;
+  border-color: #000000;*/
   font-size: 16pt;
   margin-top:20px;
   margin-left: 6px;
@@ -36,8 +46,8 @@
   height:200px;
   width:99%;
   /*float:left;*/
-  border: solid;
-  border-color: #000000;
+  /*border: solid;
+  border-color: #000000;*/
   font-size: 16pt;
   margin-top:20px;
   margin-left: 6px;
@@ -46,7 +56,7 @@
 
 .content-card {
 
-  background-color: grey;
+
 }
 
 .large {
