--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ nav .nav-wrapper {
 
 
 #weather-div{
-  height:350px;
+  height:auto;
   /*width:39%;*/
   /*float:left;*/
   /*border: solid;
@@ -88,7 +88,7 @@ nav .nav-wrapper {
 }
 
 #places-div{
-  height:200px;
+  height:auto;
   /* width:99%; */
   /*float:left;*/
   /*border: solid;
