--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ Body {
 
 a {
   font-size: 12pt;
-  font-color: white;
+  color: white;
   text-align: center;
   /*color: #FF9A6E;*/
   font-family: "helvetica";
@@ -80,7 +80,7 @@ nav .nav-wrapper {
 #sports-div{
   height:auto;
   /* width:99%; */
-  font-color: white;
+  color: white;
   /* font-size: 12pt; */
   /* margin-left: 6px; */
   padding-left: 12px;
@@ -171,4 +171,16 @@ font-size: 10px;
   min-width: 100px;
   height: auto;
   max-height:auto;
+}
+
+/* Maps CSS */
+
+.info-window-name {
+  font-weight: bold;
+  color: #FF9A6E;
+  font-size: 16px;
+}
+
+a.map-link {
+  color: #7FC3EB;
 }
