--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,18 @@ Body {
   background: linear-gradient(to top, #FF9A6E 22%, #ffffff 113%);
 }
 
+#search {
+  margin-left: 25px;
+  /* margin-right: 25px; */
+}
+
+#submit {
+  align-content: center;
+  float: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 a {
   font-size: 12pt;
   color: white;
@@ -14,28 +26,25 @@ a {
   /* background: linear-gradient(to top, #ffffff 22%, #ffffff 90%); */
 }
 
-a:link {
-  color: white;
-}
-
-/* visited link */
-a:visited {
-  color: white;
-}
-
-/* mouse over link */
-a:hover {
-  color: light gray;
-}
-
-/* selected link */
-a:active {
-  color: blue;
+a:link, a:visited, a:hover, a:active {
+  color: #7FC3EB;
 }
 
 nav .nav-header {
-  background-color: #ffffff;
+  background-color: #7FC3EB;
+ 
 }
+
+nav img {
+  height: 75px;
+  display: block;
+  padding-top: 10px;
+  margin-bottom: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  align-content: center;
+}
+
 nav .nav-wrapper {
   height:50px;
   /* line-height: 200px; */
@@ -80,11 +89,14 @@ nav .nav-wrapper {
 #sports-div{
   height:auto;
   /* width:99%; */
-  color: white;
   /* font-size: 12pt; */
   /* margin-left: 6px; */
   padding-left: 12px;
   padding-right: 12px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+
 }
 
 #places-div{
@@ -105,6 +117,11 @@ nav .nav-wrapper {
   color:#7FC3EB;
 }
 
+.card-title, .card-content {
+  color:#7FC3EB;
+  margin: auto;
+  text-align: center;
+}
 .content-card {
   padding: 5px;
   background-color: grey;
