cleaned up js files, added user input validation so toast pops up if user enters something other than letters a-z, removed unused files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,11 @@ nav img {
   padding: 5px;
 }
 
+/* weather css */
+.weather-conditions {
+  font-size: 16pt;
+}
+
 /* sports css */
 #sports-news-table {
   table-layout: fixed;
